fixed word wrapping

--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h2 {
 p {
 	padding: 1rem;
 	margin:	0;
+	overflow-wrap: break-word;
 }
 p.emoji {
 	font-size: 2rem;
